tests/snapshots/sheet__sheet_for_three_weeks_with_two_appended.snap
---
source: tests/sheet.rs
expression: sheet
---
Sheet {
    start: 2026-09-15,
    rows: [
        WeekHeader(
            WeekHeader {
                labels: [
                    "Mo",
                    "Tu",
                    "We",
                    "Th",
                    "Fr",
                    "Sa",
                    "So",
                ],
            },
        ),
        Week(
            Week {
                days: [
                    None,
                    Some(
                        2026-09-15,
                    ),
                    Some(
                        2026-09-16,
                    ),
                    Some(
                        2026-09-17,
                    ),
                    Some(
                        2026-09-18,
                    ),
                    Some(
                        2026-09-19,
                    ),
                    Some(
                        2026-09-20,
                    ),
                ],
            },
        ),
        Week(
            Week {
                days: [
                    Some(
                        2026-09-21,
                    ),
                    Some(
                        2026-09-22,
                    ),
                    Some(
                        2026-09-23,
                    ),
                    Some(
                        2026-09-24,
                    ),
                    Some(
                        2026-09-25,
                    ),
                    Some(
                        2026-09-26,
                    ),
                    Some(
                        2026-09-27,
                    ),
                ],
            },
        ),
        Week(
            Week {
                days: [
                    Some(
                        2026-09-28,
                    ),
                    Some(
                        2026-09-29,
                    ),
                    Some(
                        2026-09-30,
                    ),
                    Some(
                        2026-10-01,
                    ),
                    Some(
                        2026-10-02,
                    ),
                    Some(
                        2026-10-03,
                    ),
                    Some(
                        2026-10-04,
                    ),
                ],
            },
        ),
        Week(
            Week {
                days: [
                    Some(
                        2026-10-05,
                    ),
                    Some(
                        2026-10-06,
                    ),
                    Some(
                        2026-10-07,
                    ),
                    Some(
                        2026-10-08,
                    ),
                    Some(
                        2026-10-09,
                    ),
                    Some(
                        2026-10-10,
                    ),
                    Some(
                        2026-10-11,
                    ),
                ],
            },
        ),
        Week(
            Week {
                days: [
                    Some(
                        2026-10-12,
                    ),
                    Some(
                        2026-10-13,
                    ),
                    Some(
                        2026-10-14,
                    ),
                    Some(
                        2026-10-15,
                    ),
                    Some(
                        2026-10-16,
                    ),
                    Some(
                        2026-10-17,
                    ),
                    Some(
                        2026-10-18,
                    ),
                ],
            },
        ),
    ],
    groups: [
        RowGroup {
            kind: Month(
                8,
            ),
            start: Position {
                row: -1,
                column: 1,
            },
            end: Position {
                row: 3,
                column: 2,
            },
        },
        RowGroup {
            kind: Month(
                9,
            ),
            start: Position {
                row: 3,
                column: 3,
            },
            end: Position {
                row: 5,
                column: 6,
            },
        },
    ],
    year: Year {
        months: [
            Month {
                names: [
                    (
                        1,
                        "Jan",
                    ),
                    (
                        2,
                        "January",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Feb",
                    ),
                    (
                        2,
                        "February",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Mar",
                    ),
                    (
                        2,
                        "March",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Apr",
                    ),
                    (
                        2,
                        "April",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "May",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Jun",
                    ),
                    (
                        2,
                        "June",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Jul",
                    ),
                    (
                        2,
                        "July",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Aug",
                    ),
                    (
                        2,
                        "August",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Sep",
                    ),
                    (
                        2,
                        "September",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Oct",
                    ),
                    (
                        2,
                        "October",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Nov",
                    ),
                    (
                        2,
                        "November",
                    ),
                ],
            },
            Month {
                names: [
                    (
                        1,
                        "Dec",
                    ),
                    (
                        2,
                        "December",
                    ),
                ],
            },
        ],
    },
}
